# Daewoo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  TODO.md  benchmarks.cpp  readme.md  setup_builds.ps1  setup_builds.sh
.github/workflows/: ubuntu.yml
app/: CMakeLists.txt
app/benchmarks/: CMakeLists.txt  benchmarks.cpp
app/repl/: CMakeLists.txt  main.cpp
cmake/: CodeCoverage.cmake  LTO.cmake  Sanitizers.cmake  Tools.cmake
configured/: config.hpp.in
include/: ast.hpp  environment.hpp  evaluator.hpp  globals.hpp  lexer.hpp  object.hpp  parser.hpp  token.hpp
src/: ASTBuilder.cpp  ASTBuilder.hpp  ASTNode.hpp  ASTNodeTypes.hpp  CMakeLists.txt  ConstantTable.cpp  ConstantTable.hpp  MachineStack.cpp  MachineStack.hpp  MemoryManager.cpp  MemoryManager.hpp  OpCodes.cpp  OpCodes.hpp  SyntaxParser.cpp  SyntaxParser.hpp  TByteCodeBuilder.cpp  TByteCodeBuilder.hpp  TListObject.cpp  TListObject.hpp  TModule.cpp  TModule.hpp  TStringObject.hpp  TSymbolTable.cpp  TSymbolTable.hpp  Token.cpp  Token.hpp  TokenTable.cpp  TokenTable.hpp  VM.cpp  VM.hpp  ast.cpp  ast.hpp  defs.hpp  environment.cpp  environment.hpp  evaluator.cpp  evaluator.hpp  globals.cpp  globals.hpp  lexer.cpp  (+15 more)
tests/: CMakeLists.txt  evaluation.t.cpp  lexer.t.cpp  parser.t.cpp  program.t.cpp  vm.t.cpp
